[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "torch>=2.0.0",
    "ninja",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "bigvgan"
version = "0.1.0"
description = "NVIDIA BigVGAN vocoder – packaged for pip/uv install"
authors = [
    {name = "Lijun Wang", email = "lijun.wang@jaist.ac.jp"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy",
    "scipy",
    "librosa",
    "numba==0.61.2",
    "huggingface_hub",
]

[project.optional-dependencies]
cuda = [
    "ninja",
    "pybind11>=2.10.0",
]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools]
packages = [
    "bigvgan",
    "alias_free_activation",
    "alias_free_activation.torch",
    "alias_free_activation.cuda",
]

[tool.setuptools.package-data]
"alias_free_activation.cuda" = [
    "*.cpp",
    "*.cu",
    "*.cuh",
    "*.h",
    "*.hpp",
]

[tool.setuptools.dynamic]
version = {attr = "bigvgan.__version__"}