[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigvgan"
version = "0.0.1"
description = "NVIDIA BigVGAN vocoder – packaged for pip/uv install"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{name = "NVIDIA & Lijun Wang"}]

dependencies = [
  "torch",
  "numpy",
  "numba==0.61.2",
  "librosa>=0.11.0",
  "scipy",
  "tensorboard",
  "soundfile",
  "matplotlib",
  "auraloss",
  "tqdm",
  "nnAudio",
  "ninja",
  "huggingface_hub>=0.23.4",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools]
py-modules = [
  "bigvgan",
  "utils",
  "activations",
  "env",
  "meldataset",
  "alias_free_activation",
]

[tool.setuptools.packages.find]
where    = ["."]
include  = ["alias_free_activation*", "alias_free_torch*", "alias_free_cuda*", "*"]  # * 保证其余子包也收录
exclude  = ["tests*"]

[tool.setuptools.package-data]
"alias_free_activation.cuda" = [
    "*.cpp",
    "*.cu",
    "*.cuh",
    "*.h",
    "*.hpp",
]